apps/jupyterhub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  annotations: 
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ral.uksrc.org
    secretName: quickstart-example-tls
  rules:
  - host: ral.uksrc.org
    http:
      paths:
      - path: /juypterhub/
        pathType: Prefix
        backend:
          service:
            name: jupyterhub
            port:
              number: 443
